--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,41 @@
 article
 {
 	margin: auto;
-    width: 50%;
+    width: 40%;
     border: 3px solid;
     padding: 10px;
-    background-color: lightblue
+    background-color: lightblue;
+    font-size: 20px;
 }
 
 button
 {
 	text-align: center;
 	margin: 2px;
+	width: 15%;
+	height: 30px;
+	background-color: lightgray;
+	border-radius: 40%;
 }
 
-#agree, #disagree, #back
+button:hover
+{
+	width: 20%;
+	height: 35px;
+	background-color: lightgreen;
+}
+
+#back
+{
+	background-color: red;
+}
+
+#start
+{
+	visibility: visible;
+}
+
+#agree, #disagree, #back, #skip
 {
 	visibility: hidden;
 }
