--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 article
 {
 	margin: 0 auto;
-    width: 40%;
+    width: 50%;
     padding: 10px;
     background-color: cyan;
     font-size: 20px;
+    border: solid 1px;
 }
 
 button
@@ -56,7 +57,9 @@ th
 
 #back
 {
-	background-color: red;
+	border-style: none;
+	width: 5%;
+	visibility: hidden;
 }
 
 #start
@@ -64,7 +67,7 @@ th
 	visibility: visible;
 }
 
-#agree, #disagree, #back, #skip, #result, #non
+#agree, #disagree, #back, #skip, #result, #non, #table
 {
 	visibility: hidden;
 }
