--- a/style/style.css
+++ b/style/style.css
@@ -6,13 +6,14 @@ body
 main
 {
 	display: flex;
-	flex-direction: column;
+    flex-direction: row;
 }
 
 article
 {
 	margin: 0 auto;
     width: 50%;
+    height: 20%;
     padding: 10px;
     background-color: black;
     opacity: 0.8;
@@ -28,7 +29,6 @@ h1
 
 aside
 {
-	margin: 0 auto;
 	width: 50%;
     padding: 10px;
     background-color: black;
@@ -36,7 +36,10 @@ aside
     font-size: 20px;
 }
 
-
+#aside1
+{
+	height: 40%;
+}
 
 button
 {
@@ -45,8 +48,8 @@ button
 	margin: 2px;
 	width: 15%;
 	height: 35px;
-	background-color: lightgreen;
-	border-radius: 40%;
+	background-color: yellow;
+	border-radius: 10%;
 	font-size: 15px;
 }
 
@@ -98,7 +101,7 @@ th
 	visibility: visible;
 }
 
-#agree, #disagree, #back, #skip, #result, #non, #aside
+#agree, #disagree, #back, #skip, #result, #non, #resultButton, #aside, #aside1, #table, #table1
 {
 	visibility: hidden;
 }
