--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ main
 article
 {
 	margin: 0 auto;
-    width: 50%;
+    width: 80%;
     height: 20%;
     padding: 10px;
     background-color: black;
@@ -29,25 +29,22 @@ h1
 
 aside
 {
-	width: 50%;
+	margin: 0 auto;
+	width: 80%;
     padding: 10px;
     background-color: black;
     opacity: 0.8;
-    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    color: white;
 }
 
-#aside1
-{
-	height: 40%;
-}
 
 button
 {
 	border: none;
 	text-align: center;
 	margin: 2px;
-	width: 15%;
-	height: 35px;
 	background-color: yellow;
 	border-radius: 10%;
 	font-size: 15px;
@@ -65,30 +62,6 @@ hr
   box-shadow: 0 10px 10px -10px black inset;
 }
 
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-
-table
-{
-	width: 100%;
-}
-
-table tr:nth-child(even) {
-    background-color: #FFDAB9;
-}
-table tr:nth-child(odd) {
-   background-color: #CD853F;
-}
-
-th
-{
-	background-color: black;
-	color: white;
-	text-align: left;
-}
-
 #back
 {
 	border-style: none;
@@ -101,7 +74,7 @@ th
 	visibility: visible;
 }
 
-#agree, #disagree, #back, #skip, #result, #non, #resultButton, #aside, #aside1, #table, #table1
+#agree, #disagree, #back, #skip, #result, #non, #resultButton, #aside
 {
 	visibility: hidden;
 }
