--- a/style/style.css
+++ b/style/style.css
@@ -29,9 +29,19 @@ hr
 	background-color: orange;
 }
 
+#subjects
+{
+	color: cyan;
+}
+
 h1
 {
 	color: red;
+}
+
+h3
+{
+	color: darkred;
 }
 
 #name
@@ -49,6 +59,7 @@ input
 	width: 50px;
 }
 
+
 aside
 {
 	margin: 0 auto;
@@ -61,6 +72,18 @@ aside
     border: solid 1px white;
 }
 
+footer
+{
+	margin: 0 auto;
+	width: 80%;
+    padding: 10px;
+    background-color: black;
+    opacity: 0.9;
+    display: flex;
+    flex-direction: row;
+    border: solid 1px white;
+    color: white;
+}
 
 button
 {
@@ -90,7 +113,7 @@ button:hover
 	visibility: visible;
 }
 
-#agree, #disagree, #back, #skip, #result, #result2, #non, #resultButton, #resultButton1, #aside, #send, #number
+footer, #showExplanation, #agree, #disagree, #back, #skip, #result, #result2, #non, #resultButton, #resultButton1, #aside, #send, #number
 {
 	visibility: hidden;
 }
