--- a/style/style.css
+++ b/style/style.css
@@ -20,8 +20,9 @@ article
 
 fieldset
 {
-	margin-left: 50%;
 	background-color: peru;
+	width: 80%;
+	margin: 0 auto;
 }
 
 hr
@@ -49,14 +50,14 @@ h3
 	color: red;
 }
 
-#score
+#score, #second
 {
 	color: green;
 }
 
 input
 {
-	width: 50px;
+	width: 25px;
 }
 
 
@@ -64,7 +65,7 @@ aside
 {
 	margin: 0 auto;
 	width: 80%;
-    padding: 10px;
+    padding: 5px;
     background-color: black;
     opacity: 0.9;
     display: flex;
@@ -116,4 +117,35 @@ button:hover
 footer, #showExplanation, #agree, #disagree, #back, #skip, #result, #result2, #non, #resultButton, #resultButton1, #aside, #send, #number
 {
 	visibility: hidden;
+}
+
+#parties
+{
+	font-size: 10px;
+}
+
+#parties:hover
+{
+	color: purple;
+}
+
+#first
+{
+	color: blue;
+	margin-left: 45%;
+}
+
+#first, #second
+{
+	margin-top: 14px;
+}
+
+#score
+{
+	margin-right: 10px;
+}
+
+#fieldset
+{
+	display: none;
 }
