--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,7 @@ fieldset
 {
 	background-color: peru;
 	width: 80%;
+	opacity: 0.8;
 	margin: 0 auto;
 }
 
@@ -126,7 +127,7 @@ footer, #showExplanation, #agree, #disagree, #back, #skip, #result, #result2, #n
 	margin-right: 10px;
 }
 
-#fieldset
+#fieldset, #filterOne
 {
 	display: none;
 }
@@ -140,3 +141,16 @@ footer, #showExplanation, #agree, #disagree, #back, #skip, #result, #result2, #n
 {
 	color: green;
 }
+
+#result
+{
+	background-color: lightblue;
+	color: red;
+}
+
+#result:hover
+{
+	background-color: darkred;
+	color: lightblue
+}
+
