--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,12 @@ hr
 	background-color: orange;
 }
 
+b
+{
+	color: lightblue;
+	text-decoration: underline;
+}
+
 
 h1
 {
@@ -44,7 +50,7 @@ h3
 
 input
 {
-	width: 50px;
+	width: 40px;
 }
 
 
@@ -81,6 +87,7 @@ button
 	background-color: Chartreuse;
 	border-radius: 10%;
 	font-size: 15px;
+	padding: 5px;
 }
 
 button:hover
@@ -152,5 +159,15 @@ footer, #showExplanation, #agree, #disagree, #back, #skip, #result, #result2, #n
 {
 	background-color: darkred;
 	color: lightblue
+}
+
+#showExplanation
+{
+	background-color: #B22222;
+}
+
+#showExplanation:hover
+{
+	background-color: blue;
 }
 
